--- a/index.html
+++ b/index.html
@@ -128,17 +128,18 @@
     </style>
 </head>
 <body>
-    <h1>¿Listo para una sorpresa?</h1>
+    <h1>¿Lista para una sorpresa?</h1>
     <p>Presiona el botón para descubrirlo.</p>
     <div class="button-container">
-        <button onclick="showSurprise()">Celebrar</button>
+        <button onclick="showSurprise()">Sorpresa</button>
     </div>
     <div class="box" id="box">
         <div class="dialog">
             <h1>¡Feliz Cumpleaños!</h1>
-            <p>Que tengas un día maravilloso lleno de sorpresas y alegrías. 
-            Espero que este año te traiga mucha felicidad, éxito y amor. 
-            Disfruta de tu día al máximo, ¡te lo mereces!</p>
+            <p>Espero que tenga un hermoso día, que lo pases increíble y que sepas que
+                eres una persona maravillosa que debe seguir brillando!
+                te quiero ❤️ y espero que puedas afrontar tu nuevo semestre como sea
+                aun que el horario sea feo y que en el Belly debes darlo todo jaja !!</p>
         </div>
     </div>
     <div class="footer">
