--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
         <div class="dialog">
             <h1>¡Feliz Cumpleaños!</h1>
             <p>Espero que tengas un hermoso día, que lo pases increíble y que sepas que eres una persona maravillosa
-                que debe seguir brillando. ¡Te quiero ❤️ y espero que puedas afrontar tu nuevo semestre como sea, 
-                aunque el horario sea feo y que en el Belly debes darlo todo jaja!</p>
+                que debe seguir brillando.✨¡Te quiero ❤️ y espero que puedas afrontar tu nuevo semestre como sea, 
+                aunque el horario sea feo y que en el Belly debes darlo todo jaja!! 🍺</p>
         </div>
     </div>
     <div class="footer">
